@@ -473,7 +473,9 @@ Grid *gridLineSegmentIntersectsFace(Grid *grid, int node0, int node1,
 {
   double xyz0[3], xyz1[3];
   double interp_xyz[3];
-  double edge[3], disp[3], dot;
+  double edge[3], disp[3], diff[3], dot;
+  double last_bary;
+  GridBool keep_going;
 
   if (grid != gridNodeXYZ(grid, node0, xyz0) ) return NULL;
   if (grid != gridNodeXYZ(grid, node1, xyz1) ) return NULL;
@@ -481,15 +483,29 @@ Grid *gridLineSegmentIntersectsFace(Grid *grid, int node0, int node1,
   gridSubtractVector(xyz1, xyz0, edge);
 
   (*bary) = 0.5;
+  last_bary = DBL_MAX;
 
-  interp_xyz[0] = (*bary)*xyz1[0] + (1.0-(*bary))*xyz0[0];
-  interp_xyz[1] = (*bary)*xyz1[1] + (1.0-(*bary))*xyz0[1];
-  interp_xyz[2] = (*bary)*xyz1[2] + (1.0-(*bary))*xyz0[2];
+  keep_going = TRUE;
+  while (keep_going) {
+  
+    interp_xyz[0] = (*bary)*xyz1[0] + (1.0-(*bary))*xyz0[0];
+    interp_xyz[1] = (*bary)*xyz1[1] + (1.0-(*bary))*xyz0[1];
+    interp_xyz[2] = (*bary)*xyz1[2] + (1.0-(*bary))*xyz0[2];
 
-  gridProjectToFace(grid, faceId, interp_xyz, uv, xyz);
+    gridProjectToFace(grid, faceId, interp_xyz, uv, xyz);
 
-  gridSubtractVector(xyz, xyz0, disp);
+    gridSubtractVector(xyz, xyz0, disp);
+    gridSubtractVector(xyz, interp_xyz, diff);
 
+    (*bary) = gridDotProduct( edge, disp );
+
+    printf("bary %e diff %e\n",(*bary),sqrt(gridDotProduct( diff, diff )));
+
+    if ( (*bary) > 1.1 || (*bary) < -0.1 ) keep_going = FALSE;
+    if ( ABS((*bary)-last_bary) < 1.0e-8 ) keep_going = FALSE;
+    last_bary = (*bary);
+
+  }
   return grid;
 
 }
